--- a/src/scss/abstracts/_sizes.scss
+++ b/src/scss/abstracts/_sizes.scss
@@ -1,4 +1,5 @@
 $navbar-height: 70px;
-$large-spacing: 50px;
-$text-padding: 70px;
+$large-spacing: 100px;
+$text-padding: 50px;
 $image-height: 600px;
+$border-radius: 16px;
