--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -143,7 +143,20 @@ section {
 }
 
 .sponsors {
-    background: colors.$base-color-secondary;
+    &:before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 110%;
+        height: 110%;
+        z-index: -1;
+        background-image: url("assets/img/jake-blucker-OJX7gIU3E6U-unsplash.jpg");
+        background-size: cover;
+        background-position: center;
+        filter: grayscale(100%) blur(sizes.$blur);
+    }
+    overflow: hidden;
     padding: sizes.$large-spacing 0;
     position: relative;
     display: flex;
@@ -156,40 +169,13 @@ section {
         gap: 1rem;
     }
     .row {
-        &.blob-row {
-            overflow: hidden;
-            z-index: -1;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            .blob {
-                height: 100%;
-                &.blob-left, &.blob-right {
-                    &:after {
-                        height: 60%;
-                        top: 20%;
-                    }
-                }
-                &.blob-left {
-                    &:after {
-                        left: -150%;
-                    }
-                }
-                &.blob-right {
-                    &:after {
-                        left: auto;
-                        right: -150%;
-                    }
-                }
-            }
-        }
         --bs-gutter-x: 1rem;
         --bs-gutter-y: 1rem;
         .image {
             border-radius: sizes.$border-radius;
             height: 200px;
             background: rgba($color: #fff, $alpha: 0.5);
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(sizes.$blur);
             img{
                 object-fit: contain;
                 object-position: center;
