--- a/src/scss/abstracts/_sizes.scss
+++ b/src/scss/abstracts/_sizes.scss
@@ -2,5 +2,8 @@ $navbar-height: 70px;
 $large-spacing: 100px;
 $text-padding: 50px;
 $image-height: 600px;
+$image-height-xl: 500px;
+$image-height-lg: 400px;
+$image-height-md: 300px;
 $border-radius: 16px;
 $blur: 5px;
