remove vite and configure webpack

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @use "abstracts/colors";
 @use "abstracts/sizes";
 @use "navbar";
+@use "subpage";
 
 
 :root {
@@ -88,7 +89,7 @@ body {
     padding-bottom: sizes.$text-padding;
 }
 
-header {
+.header-home {
     position: relative;
     z-index: -1;
     display: flex;
@@ -160,7 +161,7 @@ section {
         width: 110%;
         height: 110%;
         z-index: -1;
-        background-image: url("/assets/img/jake-blucker-OJX7gIU3E6U-unsplash.jpg");
+        background-image: url("../assets/img/jake-blucker-OJX7gIU3E6U-unsplash.jpg");
         background-size: cover;
         background-position: center;
         filter: grayscale(100%) blur(sizes.$blur);
