add more content to sebastian.html

--- a/src/scss/abstracts/_sizes.scss
+++ b/src/scss/abstracts/_sizes.scss
@@ -6,4 +6,5 @@ $image-height-xl: 500px;
 $image-height-lg: 400px;
 $image-height-md: 300px;
 $border-radius: 16px;
+$small-border-radius: calc($border-radius/4);
 $blur: 5px;
