add content to kristina.html and about-us.html

--- a/src/scss/sebastian.scss
+++ b/src/scss/sebastian.scss
@@ -2,4 +2,7 @@
     .subpage-header {
         background-image: url("../assets/img/nw_221009_11_10_48-3.jpeg");
     }
+    #leistungen {
+        background-image: url("../assets/img/IMG_5249.jpeg");
+    }
 }
