--- a/src/scss/subpage.scss
+++ b/src/scss/subpage.scss
@@ -11,7 +11,7 @@
 
 .subpage {
     .image, img {
-        max-height: 100% !important;
+        max-height: calc(100vh - sizes.$large-spacing) !important;
         @include bootstrap.media-breakpoint-down(md) {
             max-height: sizes.$image-height-md !important;
         }
@@ -64,7 +64,7 @@
     }
 
     section {
-        margin-top: 0;
+        margin-top: sizes.$large-spacing;
     }
     
     .test{
@@ -72,7 +72,6 @@
     }
 
     #leistungen {
-        background-image: url("../assets/img/IMG_5249.jpeg");
         background-size: cover;
         background-position: center;
         background-color: rgba(0, 0, 0, 0.7);
