--- a/src/scss/abstracts/_sizes.scss
+++ b/src/scss/abstracts/_sizes.scss
@@ -5,6 +5,6 @@ $image-height: 600px;
 $image-height-xl: 500px;
 $image-height-lg: 400px;
 $image-height-md: 300px;
-$border-radius: 16px;
+$border-radius: 1rem;
 $small-border-radius: calc($border-radius/4);
 $blur: 5px;
