--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,4 +1,4 @@
 $yellow:rgb(255, 195, 112);
 $orange: rgb(255, 103, 103);
-$base-color: #2A2A2A;
+$base-color: #1D1F1F;
 $base-color-secondary: #313535;
