--- a/src/scss/about-us.scss
+++ b/src/scss/about-us.scss
@@ -1,5 +1,5 @@
 #about-us{
     .subpage-header {
-        background-image: url("../assets/img/ueber_uns_header.jpeg");
+        background-image: url("../assets/img/ueber_uns_header.webp");
     }
 }
