--- a/src/scss/kristina.scss
+++ b/src/scss/kristina.scss
@@ -1,10 +1,10 @@
 #kristina {
-    .subpage-header {
-        background-image: url("../assets/img/K_Hendel_2022 6.jpeg");
+    header {
+        background-image: url("../assets/img/K_Hendel_2022 6.webp");
         background-position: center;
     }
     #leistungen {
-        background-image: url("../assets/img/K_Hendel_2022\ 7_upscale.jpeg");
+        background-image: url("../assets/img/K_Hendel_2022\ 7_upscale.webp");
         background-position-y: 40%;
     }
 }
