--- a/src/scss/sebastian.scss
+++ b/src/scss/sebastian.scss
@@ -1,8 +1,8 @@
 #sebastian {
     .subpage-header {
-        background-image: url("../assets/img/nw_221009_11_10_48-3.jpeg");
+        background-image: url("../assets/img/nw_221009_11_10_48-3.webp");
     }
     #leistungen {
-        background-image: url("../assets/img/IMG_5249.jpeg");
+        background-image: url("../assets/img/IMG_5249.webp");
     }
 }
