--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,7 +44,7 @@ header {
     background-position: top;
     background-size: cover;
     background-blend-mode: darken;
-    margin-top: calc(sizes.$navbar-height * -1);
+    margin-top: - calc(sizes.$navbar-height + 26px);
     position: relative;
     z-index: -1;
 
@@ -96,16 +96,14 @@ header {
 @mixin blob {
     content: "";
     background-image: animations.$blob-gradient;
-    box-shadow: 0px 0px 20px 2px rgba(colors.$orange, 0.9);
-    -webkit-box-shadow: 0px 0px 20px 2px rgba(colors.$orange, 0.9);
     position: absolute;
     top: 0px;
     left: 0px;
     height: 100%;
     aspect-ratio: 10 / 8;
     z-index: -1;
-    border-radius: 61% 39% 54% 46% / 59% 51% 49% 41%;
-    // animation: wiggle 20s infinite;
+    border-radius: 46% 54% 51% 49% / 57% 41% 59% 43%;
+    animation: transform 12s infinite;
 }
 
 
@@ -121,15 +119,21 @@ header {
 .blob-left {
     &:after {
         left: auto;
-        right: sizes.$large-spacing;
+        right: auto;
+        @include bootstrap.media-breakpoint-up(lg) {
+            right: sizes.$large-spacing;
+        }
     };
     justify-content: start;
 }
 
 .blob-right {
     &:after {
-        left: sizes.$large-spacing;
         right: auto;
+        left: auto;
+        @include bootstrap.media-breakpoint-up(lg) {
+            left: sizes.$large-spacing;
+        }
     }
     justify-content: end;
 }
@@ -220,7 +224,10 @@ section {
             justify-content: center;
             border-radius: sizes.$border-radius;
             height: 200px;
-            padding: sizes.$text-padding;
+            padding: calc(sizes.$text-padding / 2);
+            @include bootstrap.media-breakpoint-down(md) {
+                padding: calc(sizes.$text-padding / 3);
+            }
             background: rgba($color: #fff, $alpha: 0.7);
             backdrop-filter: blur(sizes.$blur);
             img{
