--- a/src/scss/subpage.scss
+++ b/src/scss/subpage.scss
@@ -11,6 +11,7 @@
 
 .subpage {
     #leistungen {
+        position: relative;
         background-size: cover;
         background-position: center;
         background-color: rgba(0, 0, 0, 0.7);
