--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,4 +1,5 @@
 $yellow: rgba(248, 219, 64, 1);
 $orange: rgba(255, 103, 103, 1);
+$orange-dark: hsl(0, 59%, 59%);
 $base-color: #1D1F1F;
 $base-color-secondary: #313535;
