--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -168,7 +168,7 @@ header {
     padding-top: sizes.$text-padding;
     padding-bottom: sizes.$text-padding;
     .btn {
-        background: colors.$orange;
+        background: colors.$orange-dark;
         border: none;
         border-radius: sizes.$border-radius;
         color: white;
