chore: optimize config for html-bundler-webpack-plugin

--- a/src/scss/infopage.scss
+++ b/src/scss/infopage.scss
@@ -1,9 +1,8 @@
-@use "bootstrap";
 @use "abstracts/sizes";
 @use "abstracts/colors";
 
 .infopage {
-    padding: sizes.$text-padding 0 0 0;
+    padding-top: sizes.$text-padding;
     section {
         display: block;
         margin: 0;
